--- a/src/components/styles/BadgesList.css
+++ b/src/components/styles/BadgesList.css
@@ -1,6 +1,18 @@
 p {
   margin-bottom: 0;
 }
+ul {
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  grid-gap: 0 15px;
+  justify-content: center;
+}
+.BadgesList {
+  display: flex;
+  width: 100%;
+}
 .BadgesList ul > li {
   margin-bottom: 1rem;
 }
