--- a/src/pages/styles/Badges.css
+++ b/src/pages/styles/Badges.css
@@ -19,9 +19,9 @@
   padding: 0 1rem;
 }
 
-.Badges_conf-logo {
+/* .Badges_conf-logo {
   margin-bottom: 2rem;
-}
+} */
 
 .Badges__buttons {
   display: flex;
