--- a/src/components/styles/BadgesList.css
+++ b/src/components/styles/BadgesList.css
@@ -25,7 +25,11 @@ ul {
   padding: 1rem;
   justify-content: space-evenly;
 }
-
+.BadgesListItem a {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
 .BadgesListItem__avatar {
   border-radius: 50%;
   background: #a3a3a3;
